@@ -20,6 +20,20 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.15.3</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.10.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>io.quarkus.junit5</groupId>
+      <artifactId>junit5-virtual-threads</artifactId>
+      <version>3.6.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -35,7 +49,17 @@
             <arg>--enable-preview</arg>
             <arg>--add-modules</arg>
             <arg>jdk.incubator.vector</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/jdk.internal.vm=ALL-UNNAMED</arg>
           </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.1.2</version>
+        <configuration>
+          <argLine>-Djdk.tracePinnedThreads</argLine>
         </configuration>
       </plugin>
     </plugins>
